--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -1,26 +1,19 @@
-[INPUT]
-    Name forward
-    Listen 0.0.0.0
-    Port 24224
+[SERVICE]
+    Log_Level debug
 
 [FILTER]
     Name modify
     Match **
     Add firelens "true"
 
-[FILTER]
-    Name record_modifier
-    Match **
-    Record incoming_tag $TAG
-
 [OUTPUT]
     Name nrlogs
-    Match **
+    Match *
     license_key ${licenseKey}
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match **
+    Match *
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
     region ${aws_region}
