--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -3,6 +3,11 @@
     Listen 0.0.0.0
     Port 24224
 
+[INPUT]
+    Name tcp
+    Listen 0.0.0.0
+    Port 8877
+
 [OUTPUT]
     Name nrlogs
     Match **
