--- a/fluentbit/Dockerfile
+++ b/fluentbit/Dockerfile
@@ -1,24 +1,8 @@
+# Build on top of the ubuntu base image so that we have a
+# standard selection of tools available (ls, cat, etc.)
 FROM ubuntu:24.04 AS build
 
-# Install ca-certificates first for proper repository access
-RUN apt-get update && apt-get install -y ca-certificates gnupg curl && \
-  apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Install build dependencies
-RUN apt-get update && apt-get install -y \
-  unzip \
-  make \
-  gcc \
-  libc6-dev \
-  git \
-  wget \
-  libyaml-0-2 \
-  libpq-dev \
-  bison \
-  gawk \
-  python3 \
-  && apt-get clean && rm -rf /var/lib/apt/lists/*
-
+# Copy the fluent-bit binary from the official image.
 FROM fluent/fluent-bit:4.0.0 AS fluentbit
 
 FROM build AS release
