workon missing inputs

--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -3,6 +3,12 @@
     Listen 0.0.0.0
     Port 24224
 
+[INPUT]
+    Name              tcp
+    Listen            0.0.0.0
+    Port              5170
+    Format            json
+
 [OUTPUT]
     Name nrlogs
     Match **
