--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -9,6 +9,11 @@
     Port              5170
     Format            json
 
+[INPUT]
+    Name          health
+    Host          0.0.0.0
+    Port          80
+
 [OUTPUT]
     Name nrlogs
     Match **
