filter out healthchecks

--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -14,6 +14,11 @@
     Host          0.0.0.0
     Port          80
 
+[FILTER]
+    Name    grep
+    Match   **
+    Exclude log ^.*GET /api/v1/health.*
+
 [OUTPUT]
     Name nrlogs
     Match **
