drop healthchecks take 2

--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -16,8 +16,8 @@
 
 [FILTER]
     Name    grep
-    Match   **
-    Exclude log ^.*GET /api/v1/health.*
+    Match   health.*
+    Exclude alive false
 
 [OUTPUT]
     Name nrlogs
