--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -16,8 +16,8 @@
 
 [FILTER]
     Name    grep
-    Match   health.*
-    Exclude alive false
+    Match   **
+    Exclude tag ^health.*
 
 [OUTPUT]
     Name nrlogs
