please no healthchecks

--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -21,12 +21,12 @@
 
 [OUTPUT]
     Name nrlogs
-    Match **
+    Match  !health.*
     license_key ${licenseKey}
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match **
+    Match  !health.*
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
     region ${aws_region}
@@ -35,4 +35,4 @@
 
 [OUTPUT]
     Name stdout
-    Match **
+    Match  !health.*
