--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -1,3 +1,8 @@
+[SERVICE]
+    HTTP_Server  On
+    HTTP_Listen  0.0.0.0
+    HTTP_PORT    80
+
 [INPUT]
     Name forward
     Listen 0.0.0.0
@@ -9,11 +14,6 @@
     Port              5170
     Format            json
 
-[INPUT]
-    Name          health
-    Host          0.0.0.0
-    Port          80
-
 [FILTER]
     Name    grep
     Match   **
@@ -21,12 +21,12 @@
 
 [OUTPUT]
     Name nrlogs
-    Match  !health.*
+    Match **
     license_key ${licenseKey}
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match  !health.*
+    Match **
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
     region ${aws_region}
@@ -35,4 +35,4 @@
 
 [OUTPUT]
     Name stdout
-    Match  !health.*
+    Match **
