--- a/fluentbit/Dockerfile
+++ b/fluentbit/Dockerfile
@@ -31,6 +31,9 @@ ENTRYPOINT ["/fluent-bit/bin/fluent-bit"]
 
 ENV FLB_LOG_LEVEL=debug
 
+HEALTHCHECK --timeout=5s --interval=10s --start-period=20s \
+  CMD ["curl", "http://localhost:80/api/v1/health"]
+
 COPY fluentbit.conf /fluent-bit/etc/fluent-bit-custom.conf
 
 CMD ["-c", "/fluent-bit/etc/fluent-bit-custom.conf"]
