--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -4,9 +4,5 @@
     Port        24224
 
 [OUTPUT]
-    Name cloudwatch
+    Name stdout
     Match   **
-    region us-east-1
-    log_group_name fluent-bit-cloudwatch
-    log_stream_prefix from-fluent-bit-
-    auto_create_group true
